# Modular

./: .Cargo.toml.un~  .gitignore  CLAUDE.md  Cargo.toml  FUTURE_CUSTOMIZATIONS.md  PLAN.md  README.md
.github/workflows/: docs.yml  release.yml
docs/: AUDIO_SIGNAL_FLOW.md  CIRCUIT_VIEW_EXPLORATION.md  book.toml
docs/book/: 404.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-10fdbf88.js  toc-6d120e77.js  toc.html
docs/book/concepts/: connections.html  signal-types.html
docs/book/getting-started/: installation.html  (+2 more)
docs/src/: SUMMARY.md  introduction.md
patches/egui_node_graph2/: .cargo_vcs_info.json  Cargo.toml
src/: lib.rs  main.rs
src/app/: mod.rs  synth_app.rs  theme.rs
src/dsp/: context.rs  mod.rs  module_trait.rs  parameter.rs  port.rs  registry.rs  signal.rs  smoothed_value.rs
src/engine/: audio_engine.rs  audio_graph.rs  audio_processor.rs  buffer_pool.rs  channels.rs  commands.rs  midi_engine.rs  mod.rs
src/graph/: data_types.rs  mod.rs  node_data.rs  responses.rs  state.rs  templates.rs  validation.rs  value_types.rs
src/modules/: attenuverter.rs  chorus.rs  clock.rs  compressor.rs  delay.rs  distortion.rs  envelope.rs  eq.rs  filter.rs  keyboard.rs  lfo.rs  midi_monitor.rs  midi_note.rs  mixer.rs  mod.rs  moog_ladder.rs  oscillator.rs  oscilloscope.rs  output.rs  reverb.rs  sample_hold.rs  sequencer.rs  vca.rs
src/persistence/: mod.rs  patch.rs
src/widgets/: adsr_display.rs  cpu_meter.rs  fader.rs  knob.rs  led.rs  mod.rs  oscilloscope_display.rs  piano.rs  spectrum_display.rs  waveform_display.rs
(+60 files in other folders)
