[package]
name = "modular_synth"
version = "0.1.0"
edition = "2021"
description = "A node-based modular audio synthesizer"
authors = ["Chris"]
license = "MIT"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_node_graph2 = "0.7"
cpal = "0.15"
rtrb = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
