[package]
name = "modular_synth"
version = "0.1.0"
edition = "2021"
description = "A node-based modular audio synthesizer"
authors = ["Chris"]
license = "MIT"

[dependencies]
eframe = "0.30"
egui = "0.30"
egui_node_graph2 = { git = "https://github.com/chrischaps/egui_node_graph2", branch = "main" }
cpal = "0.15"
midir = "0.10"
rtrb = "0.3"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
